    - Removed redundant floor in points::floatingPointToFixedPoint.
    - Add gitignore to repository root.
    - Removed some logic for compilers older than Visual Studio 2019.
    - Add a new Houdini ABI test binary.
    - Fixed an indexing typo in tools::Filter. [Contributed by Yuanming Hu]
    - Removed redundant null pointer checks. [Contributed by Kuba Roth]

    New features:
    - Added Grid::isTreeUnique() to tell if the tree is shared with another
      grid.
    - Added PointDataLeafNode::stealAttributeSet() and
      AttributeSet::removeAttribute() for releasing ownership of attribute
      data.

    Bug fixes:
    - Fixed a bug where grids with no active values might return true when the
      method evalActiveVoxelBoundingBox is called. The correct behavior is to
      only return true if the grid contains any active values.
    - Fixed a sign propagation bug in tools::traceExteriorBoundaries() used by
      tools::meshToVolume(). This could cause values to not be propagated across
      node boundaries, leading to voxels incorrectly being marked as inside the
      isosurface. [Contributed by Tristan Barback]
    - Fixed a rotation order bug in tools::local_util::decompose()
      that caused it to fail to decompose some matrices.
    - Fixed a bug where math::Quat::inverse() was not marked as const.
      [Contributed by Michael Tao]
    - Fixed a bug in the unit test for util::CpuTimer on Windows by using a
      more accurate sleep implementation.

    API changes:
    - Removed a number of deprecated point methods.
    - points::StringIndexType is now deprecated, use Index instead.
    - PointPartitioner::voxelOffsets() now returns a std::unique_ptr instead of
      a boost::scoped_array.

    Houdini:
    - Platonic SOP is now verbified.
    - Extend all SOP references to support VDB Points.
    - Combine SOP will not error in flatten-all mode if second has no grids.

    Build: