@@ -41,13 +41,14 @@ OpenVDB Core Library    | CMake, C++14 compiler, IlmBase::Half, TBB::tbb, ZLIB, 
 OpenVDB Print           | Core Library dependencies                                                            | -
 OpenVDB LOD             | Core Library dependencies                                                            | -
 OpenVDB Render          | Core Library dependencies, OpenEXR, IlmBase                                          | -
-OpenVDB View            | Core Library dependencies, OpenGL, GLFW3, Boost::thread                              | -
+OpenVDB View            | Core Library dependencies, OpenGL, GLFW3, Boost::thread, GLEW**                      | -
 OpenVDB Python          | Core Library dependencies, Python, Boost::python                                     | Boost::numpy*, NumPy
 OpenVDB UnitTests       | Core Library dependencies, CppUnit                                                   | -
 OpenVDB Documentation   | Doxygen                                                                              | -
 
  - @b * Boost::numpy is required for NumPy support with Boost from version 1.65
  onwards.
+ - @b ** GLEW is only required for building the vdb_view binary on Windows.
 
 @subsection depDependencyTable Dependency Table
 
@@ -66,15 +67,14 @@ Boost          | 1.61    | 1.61        | Components: system, iostreams, python, 
 Python         | 2.7     | 2.7         | The python interpreter and libraries for C++/python bindings      | Y       | Y        | https://www.python.org
 NumPy          | 1.12.1  | 1.12.1      | Scientific computing with Python                                  | Y       | Y        | http://www.numpy.org
 CppUnit        | 1.10    | Latest      | A unit testing framework module for C++                           | N       | Y        | https://freedesktop.org/wiki/Software/cppunit
-Blosc          | 1.5*    | 1.5*        | Recommended dependency for improved disk compression              | N       | N**      | https://github.com/Blosc/c-blosc/releases
+Blosc          | 1.5     | 1.5         | Recommended dependency for improved disk compression              | N       | N*       | https://github.com/Blosc/c-blosc/releases
 Log4cplus      | 1.1.2   | Latest      | An optional dependency for improved OpenVDB Logging               | Y       | Y        | https://github.com/log4cplus/log4cplus
 GLFW           | 3.1     | Latest      | Simple API for OpenGL development                                 | Y       | Y        | https://www.glfw.org
 OpenGL         | 3.2     | Latest      | Environment for developing portable graphics applications         | Y       | Y        | https://www.opengl.org
+GLEW           | 1.0.0   | Latest      | A cross-platform OpenGL extension loading library.                | Y       | Y        | http://glew.sourceforge.net
 Doxygen        | 1.8.8   | 1.8.11      | Documentation generation from C++                                 | Y       | Y        | http://www.doxygen.nl
 
- - @b * Blosc [unit Test failures with 1.14 and compilation errors with 1.16]
-  (https://jira.aswf.io/browse/OVDB-78)
- - @b ** Blosc 1.16 is only available through Homebrew and currently requires
+ - @b * Blosc 1.16 is only available through Homebrew and currently requires
  [manual](@ref depManInstall) installation for 1.5.
 
 @subsection depKnownIssues Known Issues
