@@ -17,6 +17,8 @@ Version 7.1.0 - In Development
     - Add a new Houdini ABI test binary.
     - Fixed an indexing typo in tools::Filter. [Contributed by Yuanming Hu]
     - Removed redundant null pointer checks. [Contributed by Kuba Roth]
+    - Added support for vdb_view on Windows. Requires GLEW.
+    - Removed support for GLFW 2.
 
     New features:
     - Added Grid::isTreeUnique() to tell if the tree is shared with another
